Change 1 to check.

--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,7 @@
 	<title>Hello HTML,KAmal here</title>
 </head>
 <body>
-<head>ok done ce</head>
+<head>ok done check 2 passed</head>
 </body>
 </html>
 
