Change 1 to check.

--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,9 @@
 	<title>Hello HTML,KAmal here</title>
 </head>
 <body>
-<head>ok done check 2 passed</head>
+	<head>ok done </head>
+	<h1> hi</h1>
+
 </body>
 </html>
 
